# actions_spike

.github/actions/example-run/: action.yml  actions.yml
.github/workflows/: test.yml  testmo.yml
battle-ship/: pyproject.toml  test.py
battle-ship/battle_ship/: main.py
