[tool.poetry]
name = "battle-ship"
version = "0.1.0"
description = ""
authors = ["Steven Solomon <steven.solomon@radai.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.4.0"
typer = "^0.16.0"
alembic = "^1.16.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
